--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "no way!",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:wuyanwuyan/webpack_start_project.git"
+  },
   "scripts": {
     "dev": "webpack-dev-server --progress --colors"
   },
@@ -15,6 +19,8 @@
   "author": "xxs",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^0.25.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
   }
 }
