--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "xxs",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
     "css-loader": "^0.25.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
