--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --progress --colors",
-    "webpack_error_detail":"webpack --display-error-details"
+    "webpack_error_detail": "webpack --display-error-details",
+    "release_production": "webpack --config webpack.production.config.js"
   },
   "keywords": [
     "node",
@@ -22,7 +23,12 @@
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "css-loader": "^0.25.0",
+    "expose-loader": "^0.7.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.22.0",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2"
   }
 }
