--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "html-webpack-plugin": "^2.22.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "webpack-md5-hash": "0.0.5"
   }
 }
