--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "scripts": {
     "dev": "webpack-dev-server --progress --colors",
     "webpack_error_detail": "webpack --display-error-details",
-    "release_production": "webpack --config webpack.production.config.js"
+    "release_production": "webpack --config webpack.production.config.js",
+    "dev-serve-hot": "webpack-dev-server --inline --hot",
+    "dev-serve-hot-content-base": "webpack-dev-server --hot --inline --content-base ./dist"
   },
   "keywords": [
     "node",
@@ -22,14 +24,17 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
+    "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
+    "image-webpack-loader": "^2.0.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.2",
     "webpack-md5-hash": "0.0.5"
   }
 }
