--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^6.6.1",
-    "autoprefixer-loader": "^3.2.0",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.22.0",
     "image-webpack-loader": "^2.0.0",
     "postcss-loader": "^1.2.2",
