Upgrade web pack version to 2.4.2

--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "postcss-loader": "^1.2.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.2",
-    "webpack-md5-hash": "0.0.5"
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.2",
+    "webpack-md5-hash": "^0.0.5"
   },
   "dependencies": {
     "strip-ansi": "^3.0.1"
