--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "scripts": {
     "start": "webpack-dev-server --hot --inline --port=8081 --content-base ./debug",
+    "start_server": "nodemon ./server/index.js --exec babel-node",
     "dev:build": "webpack --progress --colors --display-error-details",
     "clean-debug": "node scripts/clean.js",
-    "production": "rm -rf release/* && webpack -p --config ./webpack.production.config.js",
+    "clean_server": "rm -rf ./server_dist",
+    "build_client": "rm -rf release/* && webpack -p --config ./webpack.production.config.js && cp ./src/assets/* ./release",
+    "build_server": "NODE_ENV=production babel server -d server_dist",
     "production-view": "webpack-dev-server -p --config ./webpack.production.config.js --inline --content-base ./release"
   },
   "keywords": [
@@ -23,6 +26,15 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^6.6.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-node-env-inline": "^0.2.0",
+    "babel-plugin-transform-remove-console": "^6.8.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-0": "^6.24.1",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
     "expose-loader": "^0.7.1",
@@ -39,6 +51,16 @@
     "webpack-md5-hash": "0.0.5"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
+    "koa": "^2.3.0",
+    "koa-body": "^2.5.0",
+    "koa-cors": "^0.0.16",
+    "koa-gzip": "^0.1.0",
+    "koa-router": "^7.2.1",
+    "moment": "^2.19.1",
+    "mongoose": "^4.12.4",
+    "nodemon": "^1.12.1",
+    "redis": "^2.8.0",
     "strip-ansi": "^3.0.1"
   }
 }
