--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "bluebird": "^3.5.1",
     "co": "^4.6.0",
     "co-fs": "^1.2.0",
+    "handlebars": "^4.0.11",
     "koa": "^2.3.0",
     "koa-body": "^2.5.0",
     "koa-cors": "^0.0.16",
